--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
-title: "Teaching"
-permalink: /teaching/
+title: "Teaching depreciated"
+permalink: /teaching_dep/
 author_profile: true
 ---
 
